--- a/.travis.yml
+++ b/.travis.yml
@@ -34,14 +34,14 @@ matrix:
 addons:
   apt:
     packages:
-      - g++-5
-      - gcc-5
+#      - g++-5
+#      - gcc-5
       - clang-4.0
       - boost1.61
     sources: &sources
       - sourceline: 'ppa:rakhimov/boost'
       - ubuntu-toolchain-r-test
-      - llvm-toolchain-xenial-4.0
+#      - llvm-toolchain-xenial-4.0
 
 
 before_install:
