--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ addons:
       - boost1.61
     sources: &sources
       - sourceline: 'ppa:rakhimov/boost'
-      - ubuntu-toolchain-r-test
+#      - ubuntu-toolchain-r-test
 #      - llvm-toolchain-xenial-4.0
 
 
