--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ env:
     - TEST_SUITE=tests
     - TEST_SUITE=parcel
     - TEST_SUITE=icicle
-    - TEST_SUITE=UWLCM
+    - TEST_SUITE=UWLCM_MT
+    - TEST_SUITE=UWLCM_unit_iles
+    - TEST_SUITE=UWLCM_unit_sgs
 matrix:
     exclude:
         - os: osx
@@ -25,8 +27,13 @@ matrix:
         - compiler: clang
           env: TEST_SUITE=cuda
 
+        # UWLCM is not tested on clang yet
         - compiler: clang
-          env: TEST_SUITE=UWLCM # UWLCM is not tested on clang yet
+          env: TEST_SUITE=UWLCM_MT
+        - compiler: clang
+          env: TEST_SUITE=UWLCM_unit_iles
+        - compiler: clang
+          env: TEST_SUITE=UWLCM_unit_sgs
 addons:
   apt:
     packages:
@@ -145,4 +152,6 @@ script:
     # icicle
     - if [[ $TEST_SUITE == 'icicle' ]]; then . ./.travis_scripts/icicle.sh; fi
     # UWLCM
-    - if [[ $TEST_SUITE == 'UWLCM' ]]; then . ./.travis_scripts/UWLCM.sh; fi
+    - if [[ $TEST_SUITE == 'UWLCM_MT' ]]; then . ./.travis_scripts/UWLCM_MT.sh; fi
+    - if [[ $TEST_SUITE == 'UWLCM_unit_iles' ]]; then . ./.travis_scripts/UWLCM_unit_iles.sh; fi
+    - if [[ $TEST_SUITE == 'UWLCM_unit_sgs' ]]; then . ./.travis_scripts/UWLCM_unit_sgs.sh; fi
