cmake: debug output of findopenmp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,9 @@ set(CMAKE_CXX_FLAGS_RELEASE " -DNDEBUG -Ofast -march=native -Winline")
 find_package(OpenMP)
 if(OPENMP_FOUND)
   message(STATUS " OpenMP found")
+  message("OpenMP_CXX_LIB_NAMES ${OpenMP_CXX_LIB_NAMES}")
+  message("OpenMP_CXX_LIBRARY ${OpenMP_CXX_LIBRARY}")
+  message("OpenMP_CXX_LIBRARIES ${OpenMP_CXX_LIBRARIES}")
 else()
   message(STATUS "CMAKE cant find OpenMP (known issue for AppleClang on OSX)")
   # maybe some hints are here: https://github.com/src-d/kmcuda/issues/6
