more-modern cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 # needed for the OpenMP test to work in C++-only project
 # (see http://public.kitware.com/Bug/view.php?id=11910)
-cmake_minimum_required(VERSION 2.8.11) # for target_include_directories
+cmake_minimum_required(VERSION 3.8 FATAL_ERROR) # 3.8 for built-in cuda support
 
-project(libcloudph++ CXX C)
+project(libcloudph++ LANGUAGES CXX)
 
 # the policies we care about:
 # - CMP0025 - make CMake distinguis between Apple and LLVM clang
@@ -12,6 +12,7 @@ if(CMAKE_VERSION VERSION_GREATER 2.9)
   cmake_policy(VERSION 3.0)
 endif()
 
+# put out custom find scripts first
 list(INSERT CMAKE_MODULE_PATH 0 ${PROJECT_SOURCE_DIR}/cmake)
 
 set(CMAKE_MACOSX_RPATH ON) # explicit, since policy CMP0042 didn't work...
@@ -29,24 +30,26 @@ IF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
 ENDIF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
 
-# pointing to local headers
-set(CMAKE_CXX_FLAGS "-I${CMAKE_SOURCE_DIR}/include ${CMAKE_CXX_FLAGS}")
+############################################################################################
+# see if CUDA is available
+include(CheckLanguage)
+check_language(CUDA)
 
-# enabling additional warnings
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra")
+if (NOT CMAKE_CUDA_COMPILER)
+  message(STATUS "CUDA not found. 
 
-# enabling c++11
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-
-# config-specific flags
-set(CMAKE_CXX_FLAGS_DEBUG " -g -Og -DTHRUST_DEBUG")
-set(CMAKE_CXX_FLAGS_RELWITHDEBINFO " -Ofast -march=native")
-set(CMAKE_CXX_FLAGS_RELEASE " -DNDEBUG -Ofast -march=native -Winline")
+* CUDA support will not be compiled.
+* To install CUDA, please try:
+*   Debian/Ubuntu: sudo apt-get install nvidia-cuda-toolkit
+*   Fedora: TODO
+*   Homebrew: TODO
+  ")
+endif()
 
 #############################################################################################
-# OpenMP
+# see if OpenMP is available
 find_package(OpenMP)
-if(OPENMP_FOUND)
+if(OPENMP_CXX_FOUND)
   message(STATUS " OpenMP found")
   message("OpenMP_CXX_LIB_NAMES ${OpenMP_CXX_LIB_NAMES}")
   message("OpenMP_CXX_LIBRARY ${OpenMP_CXX_LIBRARY}")
@@ -58,22 +61,60 @@ else()
 endif()
 
 ############################################################################################
-# CUDA
-#find_package(CUDA)
-if (NOT CUDA_FOUND)
-  message(STATUS "CUDA not found. 
+# allowing runtime choice between CUDA, CPP and OpenMP backends
+set(files "src/lib.cpp")
+set(files "${files};src/lib_cpp.cpp")
 
-* CUDA support will not be compiled.
-* To install CUDA, please try:
-*   Debian/Ubuntu: sudo apt-get install nvidia-cuda-toolkit
-*   Fedora: TODO
-*   Homebrew: TODO
-  ")
+if (OPENMP_CXX_FOUND)
+  set(files "${files};src/lib_omp.cpp")
 endif()
 
-set(CUDA_PROPAGATE_HOST_FLAGS OFF) # -std=c++11 will not work, TODO: actually now it would
+if (CMAKE_CUDA_COMPILER)
+  set(files "${files};src/lib_cuda.cu")
+endif()
 
-if (CUDA_FOUND)
+############################################################################################
+# create the library target
+add_library(cloudphxx_lgrngn SHARED ${files})
+
+############################################################################################
+
+# pointing to library headers
+target_include_directories(cloudphxx_lgrngn 
+  PUBLIC
+    $<INSTALL_INTERFACE:include>
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+)
+
+# enabling additional warnings
+target_compile_options(cloudphxx_lgrngn PRIVATE -Wextra)
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra")
+
+# enabling c++11
+target_compile_features(cloudphxx_lgrngn PUBLIC cxx_std_11)
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+# config-specific flags
+target_compile_options(cloudphxx_lgrngn PRIVATE "$<$<CONFIG:DEBUG>: -g -Og -DTHRUST_DEBUG>")
+target_compile_options(cloudphxx_lgrngn PRIVATE "$<$<CONFIG:RELWITHDEBINFO>: -Ofast -march=native>")
+target_compile_options(cloudphxx_lgrngn PRIVATE "$<$<CONFIG:RELEASE>: -DNDEBUG -Ofast -march=native> -Winline")
+#set(CMAKE_CXX_FLAGS_DEBUG " -g -Og -DTHRUST_DEBUG")
+#set(CMAKE_CXX_FLAGS_RELWITHDEBINFO " -Ofast -march=native")
+#set(CMAKE_CXX_FLAGS_RELEASE " -DNDEBUG -Ofast -march=native -Winline")
+
+# add dependencies
+if (CMAKE_CUDA_COMPILER)
+  target_link_libraries(cloudphxx_lgrngn PRIVATE ${CUDA_curand_LIBRARY})
+endif()
+
+target_compile_options(cloudphxx_lgrngn PUBLIC "${OpenMP_CXX_FLAGS}")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+
+set(CUDA_PROPAGATE_HOST_FLAGS OFF) # -std=c++11 will not work, TODO: actually now it would?
+
+############################################################################################
+# figure out CUDA nvcc flags
+if (CMAKE_CUDA_COMPILER)
   # trying to figure out compute capability of the current 
   message(STATUS "Trying to obtain CUDA capability of local hardware...")
   set(pfx "compute cabability check")
@@ -102,7 +143,7 @@ if (CUDA_FOUND)
       }
     }
   ")
-  execute_process(COMMAND "${CUDA_TOOLKIT_ROOT_DIR}/bin/nvcc" "test.cu" WORKING_DIRECTORY ${tmpdir} RESULT_VARIABLE status ERROR_VARIABLE msg)
+  execute_process(COMMAND "${CMAKE_CUDA_COMPILER}" "test.cu" WORKING_DIRECTORY ${tmpdir} RESULT_VARIABLE status ERROR_VARIABLE msg)
   if (NOT status EQUAL 0) 
     message(FATAL_ERROR "${pfx}: nvcc failed\n ${msg}")
   endif()
@@ -139,13 +180,13 @@ if (CUDA_FOUND)
   endif()
 
   # enabling c++11
-  set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -std=c++11")
+#  set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -std=c++11")
   unset(pfx)
   unset(tmpdir)
   unset(msg)
   unset(status)
 
-  set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -I${CMAKE_SOURCE_DIR}/include")
+#  set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -I${CMAKE_SOURCE_DIR}/include")
   
   # Release with debug info mode cuda flags
   if(CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
@@ -160,6 +201,8 @@ if (CUDA_FOUND)
     set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -DNDEBUG -O3 -use_fast_math
         -Xcompiler=-Ofast,-march=native,-DNDEBUG,-fopenmp")
   endif()
+
+  target_compile_options(cloudphxx_lgrngn PRIVATE ${CUDA_NVCC_FLAGS})
 
   add_definitions(-DCUDA_FOUND)
 endif()
@@ -178,18 +221,20 @@ if (NOT THRUST_INCLUDE_DIR)
   ")
 endif()
 
-# make nvcc include the thrust found here instead of the one shipped with cuda
-if (CUDA_FOUND)
-  CUDA_INCLUDE_DIRECTORIES("${THRUST_INCLUDE_DIR}")
-endif()
+# include thrust found here instead of the one shipped with cuda
+target_include_directories(cloudphxx_lgrngn PRIVATE ${THRUST_INCLUDE_DIR})
 
 ############################################################################################
 # Boost libraries
-find_package(Boost)
+find_package(Boost COMPONENTS) # we only need header-only boost libs
 if(Boost_FOUND)
 #TODO: if boost is not linked in some program, link boost libs to libcloudphxx_lgrngn.so ?
-#  set(libcloudphxx_LIBRARIES "${libcloudphxx_LIBRARIES};${Boost_LIBRARIES}")
-  set(libcloudphxx_INCLUDE_DIRS "${libcloudphxx_INCLUDE_DIRS};${Boost_INCLUDE_DIRS}")
+##  set(libcloudphxx_LIBRARIES "${libcloudphxx_LIBRARIES};${Boost_LIBRARIES}")
+#  set(libcloudphxx_INCLUDE_DIRS "${libcloudphxx_INCLUDE_DIRS};${Boost_INCLUDE_DIRS}")
+  target_link_libraries(cloudphxx_lgrngn
+    PUBLIC 
+      Boost::boost
+  )
 else()
 #TODO: check separately for optional and mandatory components
 message(FATAL_ERROR "Boost (or some of its components) not found.
@@ -267,15 +312,21 @@ endif()
 
 include_directories(${libcloudphxx_INCLUDE_DIRS})
 
-add_subdirectory(src) 
+#add_subdirectory(src) 
 enable_testing()
 add_subdirectory(tests)
 add_subdirectory(include) 
 add_subdirectory(bindings) 
 
+############################################################################################
+# installation
 install(
   FILES
     libcloudph++-config.cmake
   DESTINATION
     share/libcloudph++
 )
+
+set_target_properties(cloudphxx_lgrngn PROPERTIES DEBUG_POSTFIX _dbg RELWITHDEBINFO_POSTFIX _relwithdbg)
+install(TARGETS cloudphxx_lgrngn LIBRARY DESTINATION lib)
+############################################################################################
