link cloudphxx in all tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -337,7 +337,7 @@ if (EXISTS "${CMAKE_SOURCE_DIR}/.git")
   )
 endif()
 
-include_directories(${libcloudphxx_INCLUDE_DIRS})
+#include_directories(${libcloudphxx_INCLUDE_DIRS})
 
 #add_subdirectory(src) 
 enable_testing()
