--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -339,21 +339,46 @@ endif()
 
 #include_directories(${libcloudphxx_INCLUDE_DIRS})
 
-#add_subdirectory(src) 
 enable_testing()
+
+#add_subdirectory(src) 
 add_subdirectory(tests)
 add_subdirectory(include) 
 add_subdirectory(bindings) 
 
 ############################################################################################
 # installation
-install(
-  FILES
-    libcloudph++-config.cmake
-  DESTINATION
-    share/libcloudph++
-)
+#install(
+#  FILES
+#    libcloudph++-config.cmake
+#  DESTINATION
+#    share/libcloudph++
+#)
 
 set_target_properties(cloudphxx_lgrngn PROPERTIES DEBUG_POSTFIX _dbg RELWITHDEBINFO_POSTFIX _relwithdbg)
-install(TARGETS cloudphxx_lgrngn LIBRARY DESTINATION lib)
+
+# install files and export targets
+install(TARGETS cloudphxx_lgrngn EXPORT cloudphxx_lgrngn-targets 
+  LIBRARY DESTINATION lib
+  INCLUDES DESTINATION include)
+
+install(EXPORT cloudphxx_lgrngn-targets NAMESPACE clphxx:: DESTINATION lib/cmake/clphxx)
+
+# generate and install a config file
+include(CMakePackageConfigHelpers)
+
+#export(TARGETS cloudphxx_lgrngn FILE MyLibraryConfig.cmake)
+
+configure_package_config_file(
+  libcloudph++-config.cmake.in
+  "${CMAKE_CURRENT_BINARY_DIR}/libcloudph++-config.cmake"
+  INSTALL_DESTINATION 
+    lib/cmake/clphxx
+)
+install(
+  FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/libcloudph++-config.cmake"
+  DESTINATION
+    lib/cmake/clphxx
+)
 ############################################################################################
