travis: fix path for apt install

--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ before_install:
 # cuda 8 installation from https://github.com/tmcdonell/cuda/
     - if [[ $TEST_SUITE == 'cuda'     ]];  then  wget http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/cuda-10-1_10.1.168-1_amd64.deb; fi
 #    - if [[ $TEST_SUITE == 'cuda'     ]];  then  sudo dpkg -i cuda-10-1_10.1.168-1_amd64.deb; fi
-    - if [[ $TEST_SUITE == 'cuda'     ]];  then  sudo apt install -y --no-install-recommends cuda-10-1_10.1.168-1_amd64.deb; fi
+    - if [[ $TEST_SUITE == 'cuda'     ]];  then sudo apt install -y --no-install-recommends ./cuda-10-1_10.1.168-1_amd64.deb; fi
 
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo apt-get update; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew update; fi
