--- a/.travis.yml
+++ b/.travis.yml
@@ -73,9 +73,9 @@ before_install:
     - if [[ $TEST_SUITE == 'cuda'     ]];  then sudo apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/7fa2af80.pub; fi
 
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo apt-get update; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew update; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew unlink python; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew upgrade python@2; fi
+#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew update; fi
+#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew unlink python; fi
+#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew upgrade python@2; fi
 
 # first find brew python python-config
     - if [[ $TRAVIS_OS_NAME == "osx" ]]; then export BREWPYCONFIG=`brew ls python2 | grep config | head -n1`; fi
