cmake: fix Config.cmake install path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -362,7 +362,7 @@ install(TARGETS cloudphxx_lgrngn EXPORT cloudphxx_lgrngn-targets
   LIBRARY DESTINATION lib
   INCLUDES DESTINATION include)
 
-install(EXPORT cloudphxx_lgrngn-targets NAMESPACE clphxx:: DESTINATION lib/cmake/clphxx)
+install(EXPORT cloudphxx_lgrngn-targets NAMESPACE clphxx:: DESTINATION lib/cmake/libcloudph++)
 
 # generate and install a config file
 include(CMakePackageConfigHelpers)
@@ -373,12 +373,12 @@ configure_package_config_file(
   libcloudph++-config.cmake.in
   "${CMAKE_CURRENT_BINARY_DIR}/libcloudph++-config.cmake"
   INSTALL_DESTINATION 
-    lib/cmake/clphxx
+    lib/cmake/libcloudph++
 )
 install(
   FILES
     "${CMAKE_CURRENT_BINARY_DIR}/libcloudph++-config.cmake"
   DESTINATION
-    lib/cmake/clphxx
+    lib/cmake/libcloudph++
 )
 ############################################################################################
